@@ -30,33 +30,9 @@ class BuiltinListener {
         }
     }
 
-    protected void fireWriterMatched(DataReader<?> dr, PublicationData writerData) {
-        for (EntityListener el : participant.getEntityListeners()) {
-            el.writerMatched(dr, writerData);
-        }
-    }
-
-    protected void fireInconsistentQoS(DataReader<?> dr, PublicationData writerData) {
-        for (EntityListener el : participant.getEntityListeners()) {
-            el.inconsistentQoS(dr, writerData);
-        }
-    }
-
     protected void fireReaderDetected(SubscriptionData readerData) {
         for (EntityListener el : participant.getEntityListeners()) {
             el.readerDetected(readerData);
-        }
-    }
-
-    protected void fireReaderMatched(DataWriter<?> dw, SubscriptionData readerData) {
-        for (EntityListener el : participant.getEntityListeners()) {
-            el.readerMatched(dw, readerData);
-        }
-    }
-
-    protected void fireInconsistentQoS(DataWriter<?> dw, SubscriptionData readerData) {
-        for (EntityListener el : participant.getEntityListeners()) {
-            el.inconsistentQoS(dw, readerData);
         }
     }
 }
