@@ -32,7 +32,7 @@ public interface EntityListener {
      * 
      * @param remoteWriter
      */
-    public void livelinessLost(PublicationData remoteWriter);
+    //public void livelinessLost(PublicationData remoteWriter);
 
     /**
      * Called when a liveliness of remote reader has been lost. Note, that there
@@ -43,7 +43,7 @@ public interface EntityListener {
      * 
      * @param remoteReader
      */
-    public void livelinessLost(SubscriptionData remoteReader);
+    //public void livelinessLost(SubscriptionData remoteReader);
 
     /**
      * Called when a new remote reader has been detected.
@@ -53,51 +53,9 @@ public interface EntityListener {
     public void readerDetected(SubscriptionData rd);
 
     /**
-     * Called when a local writer is associated with remote reader
-     * 
-     * @param writer
-     *            local writer
-     * @param rd
-     *            remote reader
-     */
-    public void readerMatched(DataWriter<?> writer, SubscriptionData rd);
-
-    /**
      * Called when a new remote writer has been detected.
      * 
      * @param wd
      */
     public void writerDetected(PublicationData wd);
-
-    /**
-     * Called when a local reader is associated with remote writer
-     * 
-     * @param reader
-     *            local reader
-     * @param wd
-     *            remote writer
-     */
-    public void writerMatched(DataReader<?> reader, PublicationData wd);
-
-    /**
-     * Called when a local writer cannot be associated with remote reader
-     * because of inconsistent QoS.
-     * 
-     * @param writer
-     *            local writer
-     * @param rd
-     *            remote reader
-     */
-    public void inconsistentQoS(DataWriter<?> writer, SubscriptionData rd);
-
-    /**
-     * Called when a local reader cannot be associated with remote writer
-     * because of inconsistent QoS.
-     * 
-     * @param reader
-     *            local reader
-     * @param wd
-     *            remote writer
-     */
-    public void inconsistentQoS(DataReader<?> reader, PublicationData wd);
 }
