@@ -3,7 +3,9 @@
     - Expose Instances with DataReader & DataWriter. Also, for DataReader various getXXX methods
       to get Samples from history cache (in addition to using SampleListener).
     - FIX: KeyHash equals & hashCode, which is used as a key in Map that stores Instances
-        
+    - ReaderListener, WriterListener. These are used to track remote readers and writers. 
+      Corresponding changes to EntityListener
+    
 0.6.4
     - Some refactoring, general bug fixing and documentation.
     - CacheChange is removed. Sample is used instead. 
